--- a/StyleSheets/main.css
+++ b/StyleSheets/main.css
@@ -2,6 +2,7 @@ body{
     background-color: #0C0C0C;
     color: white;
     font-size: 15pt;
+    letter-spacing: 2px;
     size: 15pt;
 
     font-family: "Montserrat", sans-serif;
@@ -41,6 +42,7 @@ header a{
 
 h1{
     text-align: center;
+    letter-spacing: 5px;
     padding-top: 5%;
     font-size: 3rem;
     font-style: bold !important;
@@ -49,6 +51,7 @@ h1{
 .top h2{
     text-align: center;
     font-size: 2rem;
+    letter-spacing: 5px;
 }
 
 /* LATEST PROJECT STYLES */
